# bruce

./: .gitignore  README.md  main.py  pyproject.toml
bruce/: __init__.py  ast.py  grammar.py  lexer.py  names.py  parser.py  token.py  types.py  utils.py  visitor.py
bruce/grammar/: __init__.py  utils.py
bruce/lexer/: __init__.py
bruce/parser/: __init__.py  utils.py
bruce/parser/ll1/: parse_generator.py
bruce/regex/: __init__.py  ast.py  automata.py
bruce/tools/: grammar.py  graph.py  lexer.py  parser.py  semantic.py  token.py
bruce/tools/regex/: __init__.py  ast.py  automata.py
bruce/tools/semantic/: __init__.py  ast.py  context.py  scope.py  simple_scope.py
bruce/visitors/: checker.py  desugarer.py  evaluator.py  function_collector.py  type_builder.py  type_checker.py  type_inferer.py
